# snacks_crud_project

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
snacks/: models.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
snacks_crud/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  snack_create.html  snack_delete.html  snack_detail.html  snack_list.html  snack_update.html
